Definitive version of the algorithm Now implementing metrics

--- a/EI_simulation.ipynb
+++ b/EI_simulation.ipynb
@@ -147,6 +147,7 @@
    "cell_type": "markdown",
    "id": "09ce3fce-0aab-4f8e-990e-e2132dd40602",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -304,7 +305,9 @@
   {
    "cell_type": "markdown",
    "id": "8e71256d-7323-42e1-857c-81a4b6b43c02",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Simulation\n",
     "https://www.nature.com/articles/s41598-018-22077-3#Fig1"
@@ -827,7 +830,7 @@
     "    delta_z_e = compute_synaptic_change(state_history_e[-INCREMENT:], target_rate, growth_parameter, time_window = INCREMENT)\n",
     "    delta_z_e_history.append(delta_z_e)\n",
     "    # Plasticity for both We and Wie\n",
-    "    W_ee_adsp, W_ie_adsp, nb_new_add, nb_new_prun = add_activity_connexion_for_excitatory(W_ee_adsp, W_ie_adsp, state_e, delta_z_e, VALUE)\n",
+    "    W_ee_adsp, W_ie_adsp, nb_new_add_e, nb_new_prun_e = add_activity_connexion_for_excitatory(W_ee_adsp, W_ie_adsp, state_e, delta_z_e, VALUE)\n",
     "    # Only Wee plasticity\n",
     "    # W_ee_adsp, nb_new_add, nb_new_prun = add_activity_connexion(W_ee_adsp, state_e, delta_z_e, VALUE)\n",
     "    \n",
@@ -1004,102 +1007,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "801ba8da-7990-4cd5-bbb2-34d253952a15",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a26bfe6-ab60-4966-8640-1df13e1546bb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eeaef288-0207-4d91-a2fd-ddb27f6c29cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ca199da-1436-4e51-9aa3-408563705c66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf171819-71f7-4625-a488-3f6611c09b6e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adf1db51-c7cb-424f-8d05-668d689e467b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3275861-406e-41cc-b7f4-db1787c5acba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9c5b52d-3751-48c0-8475-b17bc9ff2aaa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be07fbf7-0ef6-482a-a36d-2cc5f2b66040",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c64bc16e-0648-4e73-ab71-7841bd929dc7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68aa733b-e22d-4b29-beea-1e106c392370",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3c3bde3-b4bf-485c-b71e-c78fcc8ae7a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "963d2859-d3f6-41dc-a7a2-69a354ee1e64",
    "metadata": {},
    "outputs": [],
    "source": []
