Some cleanup and new install

--- a/EI_analysis.ipynb
+++ b/EI_analysis.ipynb
@@ -2442,288 +2442,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b3fa87aa",
-   "metadata": {},
-   "source": [
-    "# Benchmarks\n",
-    "\n",
-    "## NARMA\n",
-    "\n",
-    "https://www.sciencedirect.com/science/article/pii/S092523122100775X?via%3Dihub\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d194c7b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def createNARMA(length=10000, system_order=10, coef = [.3, .05, 1.5, .1]):\n",
-    "\n",
-    "    inputs = np.random.rand(length, 1) * .5\n",
-    "    inputs.shape = (-1, 1)\n",
-    "    outputs = np.zeros((length, 1))\n",
-    "    for k in range(system_order - 1, length - 1):\n",
-    "        outputs[k + 1] = coef[0] * outputs[k] + coef[1] * \\\n",
-    "                                           outputs[k] * np.sum(outputs[k - (system_order - 1):k + 1]) + \\\n",
-    "                         coef[2] * inputs[k - (system_order-1)] * inputs[k] + coef[3]\n",
-    "    return inputs, outputs\n",
-    "\n",
-    "\n",
-    "def createNARMA10(length=10000):\n",
-    "    return createNARMA(length=length, system_order=10, coef=[.3, .05, 1.5, .1])\n",
-    "\n",
-    "\n",
-    "def createNARMA30(length=10000):\n",
-    "    return createNARMA(length=length, system_order=30, coef=[.2, .04, 1.5, .001])\n",
-    "\n",
-    "\n",
-    "timesteps = 200000 \n",
-    "train_samples = 10000\n",
-    "test_lenght = 5000\n",
-    "\n",
-    "u, y = createNARMA30(timesteps)\n",
-    "\n",
-    "U_train, y_train = u[:train_samples], y[:train_samples]\n",
-    "U_test, y_test = u[train_samples:], y[train_samples:]\n",
-    "\n",
-    "%matplotlib inline\n",
-    "plt.figure(figsize=(16,5))\n",
-    "plt.plot(range(200), U_train[:200])\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12c506f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We generate a network randomly with same spectral radius and same connectivity as the ADSP generated one\n",
-    "connectivity_desired =  W_ee_adsp.count_nonzero() / (W_ee_adsp.shape[0] * W_ee_adsp.shape[1])\n",
-    "_, W_ee_w, _ =  init_matrices(n_e, input_connectivity, connectivity_desired, spectral_radius)\n",
-    "eigen_adsp = sparse.linalg.eigs(W_ee_adsp, k=1, which=\"LM\", maxiter=W_ee_adsp.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
-    "sr_adsp = max(abs(eigen_adsp))\n",
-    "eigen_w = sparse.linalg.eigs(W_ee_w, k=1, which=\"LM\", maxiter=W_ee_w.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
-    "sr_w = max(abs(eigen_w))\n",
-    "W_ee_w = W_ee_w*sr_adsp/sr_w\n",
-    "\n",
-    "# Initialisation EE\n",
-    "Win_e_mg, W_ee_mg, bias_e =  init_matrices(n_e, 0.1, 0, spectral_radius, seed=SEED)\n",
-    "bias_e = bias_e*bias_scaling\n",
-    "Win_e_mg = Win_e_mg*input_scaling\n",
-    "INTERVAL_CONSTANT = 100\n",
-    "VALUE = 0.05\n",
-    "\n",
-    "# last_state\n",
-    "last_state_e = np.random.uniform(0, 1, n_e)\n",
-    "step=0\n",
-    "\n",
-    "state_history_e = []\n",
-    "delta_z_e_history = []\n",
-    "\n",
-    "total_add = 0\n",
-    "total_prun = 0\n",
-    "add = []\n",
-    "prun = []\n",
-    "mean_prun = []\n",
-    "\n",
-    "for i in range(INTERVAL_CONSTANT*5):\n",
-    "    state_e = update_reservoir(W_ee_mg, Win_e_mg, u[i], state_e, leaky_rate, bias_e, activation_function)\n",
-    "    state_history_e.append(state_e)\n",
-    "u = u[INTERVAL_CONSTANT * 5:]\n",
-    "\n",
-    "\n",
-    "train_length = len(u)\n",
-    "\n",
-    "\n",
-    "while train_length > 100000:\n",
-    "    delta_z_e = compute_synaptic_change(state_history_e[-INTERVAL_CONSTANT:], target_rate, growth_parameter, average=\"QUEUE\")\n",
-    "    W_ee_mg, _, nb_new_add_e, nb_new_prun_e = bounded_adsp(W_ee_mg, state_e, delta_z_e, VALUE)\n",
-    "    delta_z_e_history.append(delta_z_e)\n",
-    "\n",
-    "    for i in range(INTERVAL_CONSTANT):\n",
-    "        state_e = update_reservoir(W_ee_mg, Win_e_mg, u[i], state_e, leaky_rate, bias_e, activation_function)\n",
-    "        state_history_e.append(state_e)\n",
-    "    u = u[INTERVAL_CONSTANT:]\n",
-    "    train_length = len(u)\n",
-    "    \n",
-    "    total_add += nb_new_add_e  # + nb_new_add_i\n",
-    "    total_prun += nb_new_prun_e # + nb_new_prun_i\n",
-    "    add.append(total_add)\n",
-    "    prun.append(total_prun)\n",
-    "\n",
-    "    step += 1\n",
-    "add = np.array(add)\n",
-    "prun = np.array(prun)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5959951f",
-   "metadata": {},
-   "source": [
-    "### Ridge search throughout cross validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e785cc1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import TimeSeriesSplit\n",
-    "from reservoir.losses import nrmse\n",
-    "from reservoir.reservoir import train_ei, run_ei\n",
-    "\n",
-    "# k -fold walk forward validation\n",
-    "class BlockingTimeSeriesSplit():\n",
-    "    def __init__(self, n_splits):\n",
-    "        self.n_splits = n_splits\n",
-    "    \n",
-    "    def get_n_splits(self, X, y, groups):\n",
-    "        return self.n_splits\n",
-    "    \n",
-    "    def split(self, X, y=None, groups=None):\n",
-    "        n_samples = len(X)\n",
-    "        k_fold_size = n_samples // self.n_splits\n",
-    "        indices = np.arange(n_samples)\n",
-    "\n",
-    "        margin = 0\n",
-    "        for i in range(self.n_splits):\n",
-    "            start = i * k_fold_size\n",
-    "            stop = start + k_fold_size\n",
-    "            mid = int(0.8 * (stop - start)) + start\n",
-    "            yield indices[start: mid], indices[mid + margin: stop]\n",
-    "            \n",
-    "# Parameters\n",
-    "mean_nrmse_list = []\n",
-    "ridge_coef_list = []\n",
-    "\n",
-    "# Index spliting\n",
-    "n_fold = 4\n",
-    "tscv = BlockingTimeSeriesSplit(n_splits=n_fold)\n",
-    "\n",
-    "for ridge_coef in np.logspace(-10, 3,  num=20):\n",
-    "    for train_index, val_index in tscv.split(U_train):\n",
-    "#        print(\"TRAIN:\", train_index[0], val_index[-1], \"VALIDATION:\", test_index[0], val_index[-1]) \n",
-    "        U_cv_train, U_cv_val = U_train[train_index], U_train[val_index]\n",
-    "        y_cv_train, y_cv_val = y_train[train_index], y_train[val_index]\n",
-    "\n",
-    "        mean_nrmse = 0\n",
-    "\n",
-    "\n",
-    "        # Training output\n",
-    "        Wout, b_out, last_state_e, last_state_i = train_ei(W_ee_w, W_ie, W_ei, Win_e, bias_e, bias_i, U_cv_train, y_cv_train, activation_function, ridge_coef = ridge_coef)\n",
-    "\n",
-    "        # Prediction\n",
-    "        y_cv_pred = run_ei(W_ee_w, W_ie, W_ei, Win_e, bias_e, bias_i, Wout, U_cv_val, activation_function, b_out, 1, last_state_e, last_state_i)\n",
-    "        mean_nrmse = mean_nrmse + float(nrmse(y_cv_pred, y_cv_val))/n_fold\n",
-    "\n",
-    "    mean_nrmse_list.append(mean_nrmse)\n",
-    "    ridge_coef_list.append(ridge_coef)\n",
-    "\n",
-    "min_val_idx = [i for i in range(len(mean_nrmse_list)) if mean_nrmse_list[i]==min(mean_nrmse_list)][0]\n",
-    "\n",
-    "print(ridge_coef_list[min_val_idx])\n",
-    "\n",
-    "ridge_coef = ridge_coef_list[min_val_idx]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ebbbf6fa",
-   "metadata": {},
-   "source": [
-    "### Train "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bb94c26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import reservoir.reservoir\n",
-    "from reservoir.reservoir import train_ei\n",
-    "reload(reservoir.reservoir)\n",
-    "\n",
-    "ridge_coef = 1e-7\n",
-    "# Training output\n",
-    "Wout, b_out, last_state_e, last_state_i = train_ei(W_ee_w, W_ie, W_ei, Win_e, bias_e, bias_i, U_train, y_train, activation_function, ridge_coef = ridge_coef)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57775d84",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from reservoir.reservoir import run_ei\n",
-    "from reservoir.reservoirpy_util import plot_results, plot_readout\n",
-    "\n",
-    "# Prediction\n",
-    "y_pred = run_ei(W_ee_w, W_ie, W_ei, Win_e, bias_e, bias_i, Wout, U_test, activation_function, b_out, 1, last_state_e, last_state_i)\n",
-    "\n",
-    "plot_results(y_pred, y_test, sample=200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7914c79b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Training output\n",
-    "Wout_adsp, b_out_adsp, last_state_e_adsp, last_state_i_adsp = train_ei(W_ee_adsp, W_ie_adsp, W_ei_adsp, Win_e, bias_e, bias_i, U_train, y_train, activation_function, ridge_coef = ridge_coef)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f04d865",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Prediction\n",
-    "y_pred_adsp = run_ei(W_ee_adsp, W_ie_adsp, W_ei_adsp, Win_e, bias_e, bias_i, Wout_adsp, U_test, activation_function, b_out_adsp, 1, last_state_e_adsp, last_state_i_adsp)\n",
-    "\n",
-    "plot_results(y_pred_adsp, y_test, sample=200)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6df7ff3f",
-   "metadata": {},
-   "source": [
-    "### Root mean square error\n",
-    "\n",
-    "$RMSE=\\sqrt{\\frac{1}{F}\\sum\\limits_{t=0}^F(y_{pred}(t)−y_{test}(t))^2}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0b9ba86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import reservoir.losses\n",
-    "from reservoir.losses import rmse\n",
-    "reload(reservoir.losses)\n",
-    "\n",
-    "print(\"rmse\", float(rmse(y_test[:100], y_pred[:100])))\n",
-    "print(\"rmse adsp\", float(rmse(y_test[:100], y_pred_adsp[:100])))"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "85f32664",
@@ -2742,7 +2460,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "HADSP_env",
+   "display_name": "hadsp_env",
    "language": "python",
    "name": "hadsp_env"
   },
@@ -2756,7 +2474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
