--- a/MG_benchmark.ipynb
+++ b/MG_benchmark.ipynb
@@ -1222,7 +1222,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "HADSP_env",
+   "display_name": "hadsp_env",
    "language": "python",
    "name": "hadsp_env"
   },
@@ -1236,7 +1236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
