Assert number of triplets is correct

--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -4,12 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "754c1d64",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:54:37.296423Z",
-     "start_time": "2023-10-12T12:54:37.294805Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -25,10 +20,6 @@
    "execution_count": null,
    "id": "88f790cf",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:54:37.327987Z",
-     "start_time": "2023-10-12T12:54:37.296985Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -63,10 +54,6 @@
    "execution_count": null,
    "id": "37f980d7",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:55:14.787649Z",
-     "start_time": "2023-10-12T12:55:14.703826Z"
-    },
     "init_cell": true,
     "tags": []
    },
@@ -114,10 +101,7 @@
    "cell_type": "markdown",
    "id": "c6cfe4e16296a17c",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Mackey-Glass\n"
@@ -128,10 +112,6 @@
    "execution_count": null,
    "id": "fbb2dcf3",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-10T12:54:14.121812Z",
-     "start_time": "2023-10-10T12:54:13.982160Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -169,10 +149,7 @@
    "cell_type": "markdown",
    "id": "a5ae6a7ebe247f27",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "## Classification"
@@ -190,12 +167,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e868f68b-4405-48db-9bbc-34084d6fb282",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-10T20:54:53.245728Z",
-     "start_time": "2023-10-10T20:54:53.187986Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from reservoirpy.datasets import japanese_vowels\n",
@@ -220,10 +192,7 @@
    "cell_type": "markdown",
    "id": "537fa0436fc2fcff",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### InsectWingbeat"
@@ -265,12 +234,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b0675739-5d2e-497f-b990-008b7d0e5a59",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:55:30.767672Z",
-     "start_time": "2023-10-12T12:55:29.099425Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from datasets.load_datasets import load_FSDD_dataset\n",
@@ -294,10 +258,7 @@
    "cell_type": "markdown",
    "id": "a468ca5c",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "## Multivariate generation if necessary\n",
@@ -317,12 +278,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "380ad0f4-4dbc-4b97-8d28-8ffb357715d7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:55:31.051413Z",
-     "start_time": "2023-10-12T12:55:30.768704Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from datasets.multivariate_generation import extract_peak_frequencies\n",
@@ -347,12 +303,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5690a984-394f-4be3-912c-ee2ca4cc1ba4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:55:52.327501Z",
-     "start_time": "2023-10-12T12:55:31.592859Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import datasets.multivariate_generation \n",
@@ -377,12 +328,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bb45e001-4920-47e1-8dbb-6681cf9b32e9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:14.786060Z",
-     "start_time": "2023-10-12T12:55:52.330362Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
@@ -438,12 +384,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ab965ec2-e31c-475e-b452-05c9dbfde13b",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:14.787923Z",
-     "start_time": "2023-10-12T12:56:14.785776Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Min window size to get all the dynamics ? \n",
@@ -459,10 +400,6 @@
    "execution_count": null,
    "id": "bcd00d3f-9b0c-475f-bac9-b46e5f92adfb",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:15.120612Z",
-     "start_time": "2023-10-12T12:56:14.790577Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -506,10 +443,7 @@
    "cell_type": "markdown",
    "id": "e3be90fde85cfcf6",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "## Data to feed to the reservoir"
@@ -519,10 +453,7 @@
    "cell_type": "markdown",
    "id": "770968b147c07381",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "Here we calculate \n",
@@ -538,10 +469,6 @@
    "execution_count": null,
    "id": "b0f44547",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:15.120882Z",
-     "start_time": "2023-10-12T12:56:15.120299Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -584,12 +511,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c5ba8673-6905-469a-b397-5c4e620f64c0",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:15.396971Z",
-     "start_time": "2023-10-12T12:56:15.120456Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from connexion_generation.utility import TwoDimArrayWrapper\n",
@@ -605,10 +527,7 @@
    "cell_type": "markdown",
    "id": "5df206ba-36a2-4468-b719-7bc819114b1a",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "## Construct matrices"
@@ -618,10 +537,7 @@
    "cell_type": "markdown",
    "id": "0d6435e2-6f19-4987-9309-ab74694678fd",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Shared parameters"
@@ -632,14 +548,7 @@
    "execution_count": null,
    "id": "f4957e6c-e0cc-4d90-a495-348a8bbab3cd",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:15.410604Z",
-     "start_time": "2023-10-12T12:56:15.145856Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -661,10 +570,7 @@
    "cell_type": "markdown",
    "id": "e19fd1fc57ed9157",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Function to initialise and generate reservoir"
@@ -675,14 +581,7 @@
    "execution_count": null,
    "id": "ab39af15",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:15.417603Z",
-     "start_time": "2023-10-12T12:56:15.148876Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -712,10 +611,7 @@
    "cell_type": "markdown",
    "id": "9c4de89f833989d0",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Multivariate matrices"
@@ -725,12 +621,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "54472b03-ca39-4f13-92cf-e71e6d63c135",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:32.951896Z",
-     "start_time": "2023-10-12T12:56:15.154347Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# HADSP + multi\n",
@@ -765,10 +656,6 @@
    "execution_count": null,
    "id": "21d83057",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:35.434935Z",
-     "start_time": "2023-10-12T12:56:32.953247Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -805,10 +692,6 @@
    "execution_count": null,
    "id": "d49826ea",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:35.443231Z",
-     "start_time": "2023-10-12T12:56:35.434646Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -824,12 +707,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "84a76515-3af0-438e-8098-50ef8745f16c",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:35.444662Z",
-     "start_time": "2023-10-12T12:56:35.437175Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Spectral radius normalisation\n",
@@ -858,12 +736,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2f4ffd9c-ffc5-47ea-885d-f2f2a3e549fd",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:35.445034Z",
-     "start_time": "2023-10-12T12:56:35.440177Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from joblib import Parallel, delayed\n",
@@ -893,12 +766,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d3534f99-25b5-4653-8dcf-7073183e0eaa",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:56:37.265328Z",
-     "start_time": "2023-10-12T12:56:35.443061Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# We give Xtrain_band and Xtest_band the same shape as the expected input of the reservoir\n",
@@ -924,10 +792,6 @@
    "execution_count": null,
    "id": "00b9130e-a834-4256-8f29-e42add2eee19",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:58:23.854712Z",
-     "start_time": "2023-10-12T12:56:37.262858Z"
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -945,12 +809,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fd3dc743-36c8-4821-948d-f14f43af8104",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:58:23.856077Z",
-     "start_time": "2023-10-12T12:58:23.577804Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "score = compute_score(Y_pred_hadsp_multi, Y_test, \"HADSP multi\")\n",
@@ -975,12 +834,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "db50e2ca-93d7-48bb-bcff-4f885e8d5a6f",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T12:58:32.668456Z",
-     "start_time": "2023-10-12T12:58:23.587947Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if not is_multivariate: \n",
@@ -1003,10 +857,6 @@
    "execution_count": null,
    "id": "b91d01e8-8763-4bf3-ae0a-4c4569231dc4",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T13:00:11.526614Z",
-     "start_time": "2023-10-12T12:58:32.595128Z"
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -1021,12 +871,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4c5f4028-f457-46b4-a219-7f5fed575af6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T13:00:11.537910Z",
-     "start_time": "2023-10-12T13:00:11.527125Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if not is_multivariate:\n",
@@ -1211,12 +1056,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0cb2478c-bb79-4bc0-855f-b028109c8022",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T13:06:17.416853Z",
-     "start_time": "2023-10-12T13:06:12.465911Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -1271,12 +1111,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "10ec25bb-f3e8-4cdb-87ee-9772460a8cc3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T13:06:17.418660Z",
-     "start_time": "2023-10-12T13:06:17.416200Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.sparse import coo_matrix\n",
@@ -1297,12 +1132,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "901730be-d407-4d6d-973d-9fc24951bab6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T13:06:17.650845Z",
-     "start_time": "2023-10-12T13:06:17.418866Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "heatmap(sparse_reordered_matrix.todense(), cmap=color_palette(\"vlag\", as_cmap=True))"
@@ -1325,12 +1155,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0e78de13-7b2d-4ea0-9854-c7ef05c9780e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-12T13:06:55.089073Z",
-     "start_time": "2023-10-12T13:06:54.214049Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import analysis.topology\n",
