--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "754c1d64",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-20T11:11:08.610165Z",
+     "start_time": "2023-10-20T11:11:08.603538Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -20,6 +25,10 @@
    "execution_count": null,
    "id": "88f790cf",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-20T11:11:09.109067Z",
+     "start_time": "2023-10-20T11:11:09.084165Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -28,9 +37,6 @@
     "from scipy import sparse\n",
     "from tqdm import tqdm\n",
     "from importlib import reload\n",
-    "\n",
-    "import reservoirpy\n",
-    "reservoirpy.verbosity(0)\n",
     "\n",
     "# SEED\n",
     "SEED = 49387\n",
@@ -54,6 +60,10 @@
    "execution_count": null,
    "id": "37f980d7",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-20T11:11:10.450058Z",
+     "start_time": "2023-10-20T11:11:10.327656Z"
+    },
     "init_cell": true,
     "tags": []
    },
@@ -63,11 +73,19 @@
     "\n",
     "# the activation function choosen for the rest of the experiment\n",
     "# activation_function = lambda x : sigmoid(2*(x-0.5))\n",
-    "activation_function = lambda x : tanh(2*x)\n",
+    "activation_function = lambda x : tanh(x)\n",
     "\n",
     "plt.plot(np.linspace(0, 2, 100), activation_function(np.linspace(0, 2, 100)))\n",
     "plt.grid()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "949f8135-83a0-4751-9db7-628447ef30b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -89,10 +107,92 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90bc3d35-72f1-4fc8-a452-e0699b4d507d",
+   "id": "6dd4e7d3-717e-4f4b-a2fa-29fd6e272bd7",
+   "metadata": {},
+   "source": [
+    "## Torchaudio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21f91faf639d30e4",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
+   "outputs": [],
+   "source": [
+    "# load LIBRISPEECH dataset using torchaudio\n",
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "from torchaudio.datasets import VoxCeleb1Identification, YESNO\n",
+    "from torch.utils.data import random_split, DataLoader\n",
+    "\n",
+    "dataset = VoxCeleb1Identification(root=\"datasets/\", download=True)\n",
+    "\n",
+    "X = []\n",
+    "Y = []\n",
+    "for sample in tqdm(dataset):\n",
+    "    X.append(sample[0][0])\n",
+    "    Y.append(sample[2])\n",
+    "split = int(np.floor(validation_split * dataset_size))\n",
+    "indices[split:], indices[:split]\n",
+    "\n",
+    "# Use StratifiedShuffleSplit to get train/test indices\n",
+    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=42)\n",
+    "train_index, test_index = next(sss.split(X, Y))\n",
+    "\n",
+    "# Split data and labels using the indices\n",
+    "X_train = X[train_index]\n",
+    "Y_train = Y[train_index]\n",
+    "X_test = X[test_index]\n",
+    "Y_test = Y[test_index]\n",
+    "\n",
+    "sampling_rate = dataset[0][1]\n",
+    "\n",
+    "is_multivariate = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa25452c-969a-4154-a5fa-355ae022ab66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Use StratifiedShuffleSplit to get train/test indices\n",
+    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=42)\n",
+    "train_index, test_index = next(sss.split(X, Y))\n",
+    "\n",
+    "print(train_index)\n",
+    "# Split data and labels using the indices\n",
+    "X_train = np.array([X[i].numpy() for i in train_index])\n",
+    "Y_train = [Y[i] for i in train_index]\n",
+    "X_test = np.array([X[i].numpy() for i in test_index])\n",
+    "Y_test = [Y[i] for i in test_index]\n",
+    "sampling_rate = dataset[0][1]\n",
+    "\n",
+    "is_multivariate = False\n",
+    "X_pretrain = np.concatenate(X_train[:20], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f9c3783-63be-466e-8a27-45b5e064aa9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train[1].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90bc3d35-72f1-4fc8-a452-e0699b4d507d",
+   "metadata": {},
    "source": [
     "## Prediction ahead"
    ]
@@ -101,7 +201,10 @@
    "cell_type": "markdown",
    "id": "c6cfe4e16296a17c",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Mackey-Glass\n"
@@ -149,7 +252,10 @@
    "cell_type": "markdown",
    "id": "a5ae6a7ebe247f27",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Classification"
@@ -158,7 +264,12 @@
   {
    "cell_type": "markdown",
    "id": "533985e3-1953-4347-bd40-b88c367cbc1e",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-18T16:10:28.793834Z",
+     "start_time": "2023-10-18T16:10:28.774346Z"
+    }
+   },
    "source": [
     "### Japanese voyels"
    ]
@@ -192,7 +303,10 @@
    "cell_type": "markdown",
    "id": "537fa0436fc2fcff",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### InsectWingbeat"
@@ -234,7 +348,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b0675739-5d2e-497f-b990-008b7d0e5a59",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-20T11:11:17.690581Z",
+     "start_time": "2023-10-20T11:11:15.901814Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from datasets.load_datasets import load_FSDD_dataset\n",
@@ -258,7 +377,10 @@
    "cell_type": "markdown",
    "id": "a468ca5c",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Multivariate generation if necessary\n",
@@ -278,7 +400,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "380ad0f4-4dbc-4b97-8d28-8ffb357715d7",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-20T11:11:18.377724Z",
+     "start_time": "2023-10-20T11:11:18.143305Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from datasets.multivariate_generation import extract_peak_frequencies\n",
@@ -303,7 +430,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5690a984-394f-4be3-912c-ee2ca4cc1ba4",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-20T11:11:39.227368Z",
+     "start_time": "2023-10-20T11:11:19.130705Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import datasets.multivariate_generation \n",
@@ -328,7 +460,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bb45e001-4920-47e1-8dbb-6681cf9b32e9",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-20T11:12:00.856649Z",
+     "start_time": "2023-10-20T11:11:39.230512Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
@@ -384,7 +521,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ab965ec2-e31c-475e-b452-05c9dbfde13b",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-20T11:12:00.858650Z",
+     "start_time": "2023-10-20T11:12:00.856783Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Min window size to get all the dynamics ? \n",
@@ -400,6 +542,10 @@
    "execution_count": null,
    "id": "bcd00d3f-9b0c-475f-bac9-b46e5f92adfb",
    "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-10-20T11:12:00.862019Z"
+    },
+    "is_executing": true,
     "tags": []
    },
    "outputs": [],
@@ -443,7 +589,10 @@
    "cell_type": "markdown",
    "id": "e3be90fde85cfcf6",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Data to feed to the reservoir"
@@ -453,7 +602,10 @@
    "cell_type": "markdown",
    "id": "770968b147c07381",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "Here we calculate \n",
@@ -469,6 +621,7 @@
    "execution_count": null,
    "id": "b0f44547",
    "metadata": {
+    "is_executing": true,
     "tags": []
    },
    "outputs": [],
@@ -511,7 +664,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c5ba8673-6905-469a-b397-5c4e620f64c0",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from connexion_generation.utility import TwoDimArrayWrapper\n",
@@ -527,7 +682,10 @@
    "cell_type": "markdown",
    "id": "5df206ba-36a2-4468-b719-7bc819114b1a",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Construct matrices"
@@ -537,7 +695,10 @@
    "cell_type": "markdown",
    "id": "0d6435e2-6f19-4987-9309-ab74694678fd",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Shared parameters"
@@ -548,18 +709,21 @@
    "execution_count": null,
    "id": "f4957e6c-e0cc-4d90-a495-348a8bbab3cd",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
     "INCREMENT = int(min_window_size+1)\n",
-    "MAX_INCREMENT = INCREMENT*10\n",
+    "MAX_INCREMENT = int(max_window_size)\n",
     "VALUE = 0.05\n",
     "target_rate = 0.7\n",
     "growth_parameter = 0.15\n",
     "\n",
     "bias_scaling = 1\n",
-    "input_scaling = 0.15\n",
+    "input_scaling = 0.1\n",
     "leaky_rate = 1\n",
     "\n",
     "if max_window_size <= INCREMENT or  INCREMENT <= min_window_size:\n",
@@ -570,7 +734,10 @@
    "cell_type": "markdown",
    "id": "e19fd1fc57ed9157",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Function to initialise and generate reservoir"
@@ -581,7 +748,10 @@
    "execution_count": null,
    "id": "ab39af15",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -611,7 +781,10 @@
    "cell_type": "markdown",
    "id": "9c4de89f833989d0",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Multivariate matrices"
@@ -627,7 +800,7 @@
     "# HADSP + multi\n",
     "Win_hadsp_multi, W_hadsp_multi, bias_hadsp_multi, connectivity_band, sr_hadsp_multi = initialise_and_train(input_scaling, n, input_connectivity, connectivity, bias_scaling, SEED, frequency_bands)\n",
     "\n",
-    "# 3rd (random + multi)\n",
+    "# random + multi\n",
     "Win_random_multi, W_random_multi, bias_random_multi =  init_matrices(n, 1, connectivity_band, sr_hadsp_multi)\n",
     "bias_random_multi= bias_random_multi*bias_scaling\n",
     "Win_random_multi= Win_random_multi*input_scaling\n",
@@ -796,6 +969,8 @@
    },
    "outputs": [],
    "source": [
+    "import performances.esn_model_evaluation\n",
+    "reload(performances.esn_model_evaluation)\n",
     "from performances.esn_model_evaluation import train_and_predict_model, compute_score\n",
     "# To remember : \n",
     "#  For reservoirpy   pre_s = W @ r + Win @ (u + noise_gen(dist=dist, shape=u.shape, gain=g_in)) + bias\n",
@@ -883,9 +1058,7 @@
   {
    "cell_type": "markdown",
    "id": "5dc7ab1a-e020-489a-8ff9-9bbd689de15e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Prediction ahead"
    ]
@@ -1199,7 +1372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
