--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -51,40 +51,6 @@
    "metadata": {
     "tags": []
    },
-   "source": [
-    "# Reservoir functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37f980d7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-20T11:11:10.450058Z",
-     "start_time": "2023-10-20T11:11:10.327656Z"
-    },
-    "init_cell": true,
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from reservoir.activation_functions import tanh, heaviside, sigmoid\n",
-    "\n",
-    "# the activation function choosen for the rest of the experiment\n",
-    "# activation_function = lambda x : sigmoid(2*(x-0.5))\n",
-    "activation_function = lambda x : tanh(x)\n",
-    "\n",
-    "plt.plot(np.linspace(0, 2, 100), activation_function(np.linspace(0, 2, 100)))\n",
-    "plt.grid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "949f8135-83a0-4751-9db7-628447ef30b4",
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -118,10 +84,7 @@
    "execution_count": null,
    "id": "21f91faf639d30e4",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -201,10 +164,7 @@
    "cell_type": "markdown",
    "id": "c6cfe4e16296a17c",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Mackey-Glass\n"
@@ -252,10 +212,7 @@
    "cell_type": "markdown",
    "id": "a5ae6a7ebe247f27",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "## Classification"
@@ -303,10 +260,7 @@
    "cell_type": "markdown",
    "id": "537fa0436fc2fcff",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### InsectWingbeat"
@@ -377,10 +331,7 @@
    "cell_type": "markdown",
    "id": "a468ca5c",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "## Multivariate generation if necessary\n",
@@ -511,6 +462,35 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Reservoir functions"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8685e0ff43b927c3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from reservoir.activation_functions import tanh, heaviside, sigmoid\n",
+    "\n",
+    "# the activation function choosen for the rest of the experiment\n",
+    "# activation_function = lambda x : sigmoid(2*(x-0.5))\n",
+    "activation_function = lambda x : sigmoid(2*(x-0.5))\n",
+    "\n",
+    "plt.plot(np.linspace(0, 2, 100), activation_function(np.linspace(0, 2, 100)))\n",
+    "plt.grid()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "615a38d2df41a727"
+  },
+  {
+   "cell_type": "markdown",
    "id": "e2b39f1d-d8d6-451b-8d4d-b8f8f74a498d",
    "metadata": {},
    "source": [
@@ -589,10 +569,7 @@
    "cell_type": "markdown",
    "id": "e3be90fde85cfcf6",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "## Data to feed to the reservoir"
@@ -602,10 +579,7 @@
    "cell_type": "markdown",
    "id": "770968b147c07381",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "Here we calculate \n",
@@ -682,10 +656,7 @@
    "cell_type": "markdown",
    "id": "5df206ba-36a2-4468-b719-7bc819114b1a",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "## Construct matrices"
@@ -695,10 +666,7 @@
    "cell_type": "markdown",
    "id": "0d6435e2-6f19-4987-9309-ab74694678fd",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Shared parameters"
@@ -709,10 +677,7 @@
    "execution_count": null,
    "id": "f4957e6c-e0cc-4d90-a495-348a8bbab3cd",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -734,10 +699,7 @@
    "cell_type": "markdown",
    "id": "e19fd1fc57ed9157",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Function to initialise and generate reservoir"
@@ -748,10 +710,7 @@
    "execution_count": null,
    "id": "ab39af15",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -781,10 +740,7 @@
    "cell_type": "markdown",
    "id": "9c4de89f833989d0",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Multivariate matrices"
@@ -838,7 +794,7 @@
     "    Win_hadsp_uni, W_hadsp_uni, bias_hadsp_uni, connectivity_hadsp_uni, sr_hadsp_uni = initialise_and_train(input_scaling, n,  input_connectivity, connectivity, bias_scaling, SEED, X_pretrain.flatten())\n",
     "    \n",
     "    # random + uni\n",
-    "    Win_normal, W_normal, bias_normal =  init_matrices(n, 1, connectivity_hadsp_uni)\n",
+    "    Win_normal, W_normal, bias_normal =  init_matrices(n, 1, connectivity_hadsp_uni, sr_hadsp_uni)\n",
     "    bias_normal= bias_normal*bias_scaling\n",
     "    Win_normal= Win_normal*input_scaling   \n",
     "    \n",
